# devcontainers-features

./: .gitignore  .prettierignore  .tool-versions  README.md  Taskfile.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bitbucket-mirror.yaml  release.yaml  test-all-features.yaml  test-changed-features.yaml  test.yaml
.trunk/: trunk.yaml
feature_definitions/commitizen/: feature-definition.json
feature_definitions/commitizen-tools/: feature-definition.json
feature_definitions/cosign-asdf/: feature-definition.json
feature_definitions/doppler-asdf/: feature-definition.json
feature_definitions/golang-asdf/: feature-definition.json
feature_definitions/java-asdf/: feature-definition.json
feature_definitions/maven-asdf/: feature-definition.json
feature_definitions/nodejs-asdf/: feature-definition.json
feature_definitions/poetry-asdf/: feature-definition.json
feature_definitions/python-asdf/: feature-definition.json
feature_definitions/safety/: feature-definition.json
feature_definitions/semgrep/: feature-definition.json
feature_definitions/semgrep-asdf/: feature-definition.json
feature_definitions/task-asdf/: feature-definition.json
feature_definitions/trivy-asdf/: feature-definition.json
feature_definitions/trunk/: feature-definition.json
pending/maven-asdf/: scenarios.json
pending/poetry-asdf/: scenarios.json
src/asdf-plugin-manager-asdf/: README.md  devcontainer-feature.json  install.sh
src/commitizen/: README.md  install.sh  (+2 more)
src/commitizen-tools/: README.md  dependencies.sh  devcontainer-feature.json  install.sh
(+130 files in other folders)
